TransferView - QR, Back icons

--- a/PlutoWallet/Components/TransferView/TransferView.xaml
+++ b/PlutoWallet/Components/TransferView/TransferView.xaml
@@ -25,8 +25,24 @@
 
                 <HorizontalStackLayout FlowDirection="LeftToRight">
                     <Entry Placeholder="Address" Text="{Binding Address}" Margin="20" />
-                    <Button Text="QR" Clicked="OnShowQRClicked" />
+
+                    <!--QR code button-->
+                    <Image WidthRequest="48" Margin="10, 10, 10, 10"
+                        AbsoluteLayout.LayoutBounds="1, 0, AutoSize, AutoSize"
+                        AbsoluteLayout.LayoutFlags="PositionProportional">
+                        <Image.Source>
+                            <FontImageSource Color="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                                            Glyph="&#xf029;"
+                                             FontFamily="FontAwesome"
+                                             Size="56"/>
+                        </Image.Source>
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="OnShowQRClicked" />
+
+                        </Image.GestureRecognizers>
+                    </Image>
                 </HorizontalStackLayout>
+
                 <Entry Placeholder="Amount" Text="{Binding Amount}" Margin="20"
                        Keyboard="Numeric"/>
 
@@ -36,14 +52,21 @@
                         Clicked="SignAndTransferClicked"/>
             </VerticalStackLayout>
 
-            <Label AbsoluteLayout.LayoutBounds="0, 0, 40, 40"
-                   Text="&lt;" FontAttributes="Bold">
-                <Label.GestureRecognizers>
+            <!--Go back button-->
+            <Image WidthRequest="24"
+                    AbsoluteLayout.LayoutBounds="0, 0, 40, 40"
+                >
+                <Image.Source>
+                    <FontImageSource Color="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                                    Glyph="&#xf177;"
+                                        FontFamily="FontAwesome"
+                                        Size="24"/>
+                </Image.Source>
+                <Image.GestureRecognizers>
                     <TapGestureRecognizer Tapped="OnBackClicked" />
 
-                </Label.GestureRecognizers>
-
-            </Label>
+                </Image.GestureRecognizers>
+            </Image>
         </AbsoluteLayout>
         
     </Frame>
