--- a/PlutoWallet/Components/CalamarView/CalamarView.xaml
+++ b/PlutoWallet/Components/CalamarView/CalamarView.xaml
@@ -42,7 +42,7 @@
                        AbsoluteLayout.LayoutFlags="PositionProportional"
                        >
                 <Image.Source>
-                    <FontImageSource Color="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                    <FontImageSource Color="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource DarkThemeWhite}}"
                                         Glyph="&#xf021;"
                                          FontFamily="FontAwesome"
                                          Size="20" />
