--- a/PlutoWallet/View/SettingsPage.xaml
+++ b/PlutoWallet/View/SettingsPage.xaml
@@ -12,7 +12,7 @@
                 Placeholder="Enter endpoint name" Text="{Binding Name}" />
         <Entry
                 Placeholder="Enter endpoint URL" Text="{Binding Url}" />
-        <Button Text="save endpoint" Margin="20, 10, 20, 0" Clicked="SaveEndpoint" />
+        <Button Text="save endpoint" Margin="20, 10, 20, 0" Command="{Binding SaveEndpointCommand}" />
         <Button Text="clear all custom endpoints" Margin="20, 10, 20, 0" Clicked="ClearEndpoints" />
     </VerticalStackLayout>
 </ContentPage>
