--- a/PlutoWallet/Resources/Styles/Colors.xaml
+++ b/PlutoWallet/Resources/Styles/Colors.xaml
@@ -6,9 +6,9 @@
 
     <Color x:Key="GentlePink">#ffebef</Color>
 
-    <Color x:Key="Primary">#512BD4</Color>
+    <Color x:Key="Primary">#1d70a2</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Tertiary">#65def1</Color>
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
